2018-03-15  Ryan Haddad  <ryanhaddad@apple.com>

        Skip editing/pasteboard/data-transfer-get-data-on-pasting-html-uses-blob-url.html on iOS.
        https://bugs.webkit.org/show_bug.cgi?id=183219

        Unreviewed test gardening.

        * platform/ios/TestExpectations:

2018-03-16  Joanmarie Diggs  <jdiggs@igalia.com>

        AX: AccessibilityNodeObject::textForLabelElement() doesn't follow AccName calculation rules
        https://bugs.webkit.org/show_bug.cgi?id=183661

        Reviewed by Chris Fleizach.

        * accessibility/aria-label-on-label-element-expected.txt: Moved from Mac tests to shared tests.
        * accessibility/aria-label-on-label-element.html: Moved from Mac tests to shared tests.
        * accessibility/label-with-pseudo-elements-expected.txt: Added.
        * accessibility/label-with-pseudo-elements.html: Added.
        * platform/gtk/accessibility/aria-label-on-label-element-expected.txt: Added.
        * platform/gtk/accessibility/label-with-pseudo-elements-expected.txt: Added.
        * platform/mac/accessibility/label-with-pseudo-elements-expected.txt: Added.
        * platform/win/accessibility/label-with-pseudo-elements-expected.txt: Added.

2018-03-16  Claudio Saavedra  <csaavedra@igalia.com>

        [WPE] Rebaseline for web-platform-tests specific test

        Unreviewed gardening.
        * platform/wpe/imported/w3c/web-platform-tests/html/dom/interfaces-expected.txt:

2018-03-16  Claudio Saavedra  <csaavedra@igalia.com>

        [GTK][WPE] Remove baselines for FileAPI test.

        Unreviewed gardening. Now with service workers the results in both
        WPE and GTK+ are the same as the default expectation.
        * platform/gtk/imported/w3c/web-platform-tests/FileAPI/historical.https-expected.txt: Removed.
        * platform/wpe/imported/w3c/web-platform-tests/FileAPI/historical.https-expected.txt: Removed.

2018-03-15  Matt Lewis  <jlewis3@apple.com>

        Rebaselined test on macOS WK1 after r229642.
